--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">ABOUT</a>
                         </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -43,7 +42,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0"> New York Metropolitan Area  | Mobile Software Engineer at GOAT Group | UC Irvine
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0"> New York Metropolitan Area  | Mobile Software Engineer at GOAT Group | UC Irvine Alumni
 </p>
             </div>
         </header>
@@ -80,7 +79,7 @@
                         <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div><img width="900" height="600"class="img-fluid" src="assets/img/portfolio/edit-24px.svg" alt="Pen Icon"/>
+                            </div><img width="900" height="600"class="img-fluid" src="assets/img/portfolio/read_more_24dp.svg" alt="Read More Icon"/>
                         </div>
                     </div>
                 
@@ -106,9 +105,8 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/developer_mode-24px.svg" alt="Developer Mode"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"> &emsp; Darryl builds mobile experiences for Alias, the seller app for GOAT and Flight Club. Users can sell their sneakers and clothing items with help from seller analytics, such as data-driven pricing recommendations, buying trends, sales histories, and more.</p>
-                                    <p class="mb-5"> &emsp;Previously,  Darryl worked as a Mobile Developer on the Consumer Identity team at Capital One. His team worked to provide solutions to help verify customer identities and allow them to do mobile banking in a way that is safe, secure, and easy.</p>
-                                    <p class="mb-5"> &emsp;Darryl has been primarily working in Android development and Kotlin in the few years, and enjoys working in the Mobile Development space.</p>
+                                    <p class="mb-5"> &emsp;Darryl builds front end customer experiences for Alias, the seller app for the GOAT marketplace. He supports over two million users who use the platform to sell premium clothing items easily and globally. He and his team make it easy for users to sell their items, and present them with visually engaging seller analytics data, like data-driven pricing and buying trends, that assist sellers in selling items optimally.</p>
+                                    <p class="mb-5"> &emsp;Previously, Darryl worked as an Android developer on the Consumer Identity team at Capital One. He primarily worked on an Android SDK consumed by multiple Capital One mobile apps, designed to add an extra level of authenication to customers and allow millions of users to do banking safely and securely. He focused on improving authentication features such as One-Time Pin (OTP) and delivering the user interface for Presto, an authentication feature that utilized NFC technology on Capital One credit cards.</p>
                                     <button class="btn btn-primary font-weight-bold bg-secondary text-white rounded" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
                             </div>
@@ -126,7 +124,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">Values</h2>
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">Workplace Values</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -135,10 +133,13 @@
                                     </div>
                                     <!-- Portfolio Modal - Image--><img width="300" height="300" class="img-fluid rounded mb-5" src="assets/img/portfolio/favorite_border-24px.svg" alt="Open Heart"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="m-3">What people can expect from Darryl at the workplace:</p>
+                                    <p class="m-3"><span style="font-weight: bold; ">“What really stands out about Darryl is his passion for what he does. He’s always looking to learn and grow, and it shows in the quality of his work. Plus, he's just a really pleasant person to work with—positive, collaborative, and always ready to tackle the next challenge.” -Recommended by Tyler on LinkedIn</span></p>
+                                    <br>
+                                    <p class="m-3 text-left"><span style="font-weight: bold; ">What people can expect from Darryl at the workplace:
+                                    </span></p>
                                     <ul>
-                                        <li class="m-3 text-left"><span style="font-weight: bold; ">A Strong Learning Attitude: </span> He aims to learn and improve everyday as a growing engineer.</li>
-                                        <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication: </span> He makes a consistent effort and goes out of the way to ensure that his communication with his team is clear. </li>
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">A Curious, Learning Attitude:</span> He aims to learn and improve everyday as a professional engineer.</li>
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">Clear Communication:</span> He makes a consistent, proactive effort to communicate and goes out of the way to ensure that his communication with his team is clear. </li>
                                         <li class="m-3 text-left"><span style="font-weight: bold;">A Commitment to Inclusion and Respect: </span> He is proactive about listening and learning more about his role in making his workplace a more welcoming and safe space for him and his colleagues. </li> 
                                     </ul>
                                     <button class="btn btn-primary font-weight-bold bg-secondary text-white rounded" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
@@ -158,18 +159,21 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary mb-0">Blog Posts</h2>
+                                    <h2 class="portfolio-modal-title text-secondary mb-0">More About Darryl</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/edit-24px.svg" alt="Pencil"/>
+                                    <!-- Portfolio Modal - Image--><img width="300" height="300"class="img-fluid rounded mb-5" src="assets/img/portfolio/read_more_24dp.svg" alt="Read More"/>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-5"><ul>
-                                        <li><a href="https://medium.com/capital-one-tech/the-most-helpful-resources-from-my-first-year-in-android-capital-one-44ba2f9e31a2">The Most Helpful Resources From My First Year in Android</a></li>
-                                    </ul> </p>
+                                <p class="mb-5">
+                                    <ul>
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">Mentorship:</span>  Darryl is invested in building up others, and does so through professional mentorship. His mentorship provides students with the advice, feedback, and encouragement they need to start successful  careers. You can find him in multiple professional mentoring networks, such as the CodePath Mentor Network and BobaTalks. You can reach out directly to him for mentorship through LinkedIn and Topmate.</li>
+                                        <li class="m-3 text-left"><span style="font-weight: bold; ">Writing:</span> Sometimes he writes. Check out his Medium Post for Capital One Tech, <a href="https://medium.com/capital-one-tech/the-most-helpful-resources-from-my-first-year-in-android-capital-one-44ba2f9e31a2">The Most Helpful Resources From My First Year in Android</a>. </li>
+                                    </ul>
+                                </p>
                                     <button class="btn btn-primary font-weight-bold bg-secondary text-white rounded" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
                                 </div>
                             </div>
@@ -195,10 +199,10 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">Darryl (He/Him) is a software engineer based in the New York Metropolitan Area. He started his career at Capital One as part of the Technology Development Program (TDP), and is enthusiastic about mobile applications and Android Development.</p>
+                        <p class="pre-wrap lead">Darryl (he/him) is a software engineer invested in creating beautiful products for mobile.  Darryl started his career at Capital One with the Digital Identity team, working on Android SDKs that protected millions of customers from fraud.  He also has experience working on backend microservices and API Design.</p>
                     </div>
                     <div class="col-lg-4 ml-auto">
-                        <p class="pre-wrap lead">He currently works as a Mobile Software Engineer for GOAT Group. He enjoys listening to podcasts and is interested in fashion, sneakers, and sports.</p>
+                        <p class="pre-wrap lead">He currently works at GOAT, a mobile-first marketplace for safely buying and selling luxury clothing items such as sneakers and high-fashion apparel. He is based out of the New York City Metropolitan Area.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
                         <p class="pre-wrap lead">The best way to connect with Darryl is through LinkedIn.</p>
@@ -212,7 +216,7 @@
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="mb-4">LOCATION</h4>
-                        <p class="pre-wrap lead mb-0">New York Metropolitan Area </p>
+                        <p class="pre-wrap lead mb-0">New York City Metropolitan Area </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
@@ -229,14 +233,14 @@
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="mb-4">LIKE THIS WEBSITE?</h4>
-                        <p class="pre-wrap lead mb-0"> You can use the <a href="https://startbootstrap.com/themes/freelancer/">Freelancer template</a> created by Start Bootstrap and create your own!</p>
+                        <p class="pre-wrap lead mb-0"> You can use the <a href="https://startbootstrap.com/theme/freelancer">Freelancer template</a> created by Start Bootstrap and create your own!</p>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- Copyright Section-->
         <section class="copyright py-4 text-center text-white bg-primary">
-            <div class="container"><small class="pre-wrap">Darryl Mak © 2020</small></div>
+            <div class="container"><small class="pre-wrap">Darryl Mak © 2025</small></div>
         </section>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
@@ -245,9 +249,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Contact form JS-->
-        <script src="assets/mail/jqBootstrapValidation.js"></script>
-        <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
