--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0"> New York Metropolitan Area  | Mobile Software Engineer at GOAT Group | UC Irvine Alumni
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0"> New York City Metropolitan Area  | Mobile Software Engineer at GOAT Group | UC Irvine Alumni
 </p>
             </div>
         </header>
